feat: add tabel name modify interceptor